fix font size on mobile device of header

--- a/style.css
+++ b/style.css
@@ -119,3 +119,9 @@ Media Queries*/
         padding-left: 30px;
     }
 }
+
+@media screen and (max-width: 400px) {
+    h1 {
+        font-size: 19px;
+    }
+}
